[gd_scene load_steps=2 format=3 uid="uid://ddvi8ifrfas8m"]

[ext_resource type="Script" path="res://main.gd" id="1_tnb54"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tnb54")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="cipher_selection_button" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Ceasar cipher"
popup/item_1/text = "Unicode"
popup/item_1/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Shift "

[node name="less" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "-"

[node name="shift" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "1"
alignment = 1

[node name="add" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "+"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="input" type="TextEdit" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
wrap_mode = 1

[node name="display" type="RichTextLabel" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/cipher_selection_button" to="." method="_on_cipher_selection_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/less" to="." method="_on_less_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/add" to="." method="_on_add_pressed"]
[connection signal="text_changed" from="VBoxContainer/MarginContainer/HBoxContainer/input" to="." method="_on_input_text_changed"]
